--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "mineflayer": "^4.25.0",
         "mineflayer-pathfinder": "^2.4.5",
         "socket.io": "^4.8.3",
-        "socks-proxy-agent": "^8.0.0"
+        "socks-proxy-agent": "^8.0.0",
+        "socket.io-client": "^4.8.1"
     }
 }
